# world-id-contracts

./: .dockerignore  .editorconfig  .env.example  .gas-snapshot  .gitignore  .gitmodules  .prettierignore  .prettierrc.js  .prettierrc.json  .size-snapshot  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  foundry.toml  package-lock.json  package.json
.github/workflows/: docker.yml  release.yml  relyance-sci.yml  tests.yml
deployment_logs/: ethereum-mainnet.nfc-secure.world-id-only.json  ethereum.nfc.prod.world-id-only.json  optimism-mainnet-staging.json  sepolia.nfc-secure.stage.world-id-only.json  sepolia.nfc.stage.world-id-only.json  sepolia.orb.dev.world-id-only.json  sepolia.orb.stage.world-id-only.json
docs/: Disaster Recovery Plan.md  WorldID Router.md  user-flows.md
script/: Deploy.s.sol  DeployNFCSequencer.s.sol  generate_anvil_state.sh
scripts/: deploy.js  fetchAndSubmitAddMemberEvents.js  migrationSave.js
src/: DeletionTreeVerifier.sol  InsertionTreeVerifier.sol  Semaphore.sol  SemaphoreAirdrop.sol  SemaphoreAirdropManager.sol  SemaphoreAirdrops.sol  SemaphoreMultiAirdrop.sol  SemaphoreVerifier.sol  TreeVerifier.sol  Verifier.sol  WorldIDIdentityManager.sol  WorldIDIdentityManagerImplV1.sol  WorldIDIdentityManagerImplV2.sol  WorldIDIdentityManagerImplV3.sol  WorldIDRouter.sol  WorldIDRouterImplV1.sol
src/abstract/: WorldIDImpl.sol  WorldIDProxy.sol
src/data/: VerifierLookupTable.sol  VerifierLookupTable4844.sol
src/interfaces/: IBaseWorldID.sol  IBridge.sol  (+6 more)
submitter/: .gitignore  Cargo.toml  README.md
submitter/src/: abi.json  main.rs
(+90 files in other folders)
