[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["env", "derive"] }
ethereum-types = "0.14.1"
ethers = "2.0.3"
futures = "0.3.28"
indicatif = "0.17.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
